# PRIVET

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
experiments/copycat_cifar10/: PLOT_comparison.ipynb  comparison_dinov2.py  comparison_wavelet.py
experiments/genetic_leakage/: 65K_SNPs_1668_samples.py  PLOT_65K_SNPs_1668_samples.ipynb  low_sample_size.ipynb
experiments/membership_attack/: 65K_controlled_leakage.ipynb  RBM_HGD.ipynb
metrics/: AATS.py  AuthPct.py
privet/: data_utils.py  misc_utils.py  nn_utils.py  plot_utils.py  privet.py  runner.py  stats_utils.py
privet/metrics/: AATS.py  AuthPct.py
src/: data_utils.py  misc_utils.py  nn_utils.py  plot_utils.py  privet.py  runner.py  stats_utils.py
tests/: test_privet.ipynb  test_privet_low_sample_size.ipynb
