[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privet"
version = "0.1.0"
authors = [
    {name="Antoine Szatkownik"},
]
maintainers = [
    {name = "Nicolas Béreux", email = "nicolas.bereux@gmail.com"},
]
description = "PRIVET: PRIVacy metric based on Extreme value Theory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "numpy>=2.0.0",
    "numba>=0.61.0",
    "scipy",
    "tqdm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["PRIVET"]

[project.scripts]
rbms="rbms.scripts.entrypoint:main"

[project.urls]
Homepage = "https://github.com/nbereux/PRIVET"
Issues = "https://github.com/nbereux/PRIVET/issues"

[tool.ruff]

line-length = 90
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
exclude = ["*.ipynb"]

select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
exclude = ["*.ipynb"]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
